--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://www.forge-onward.pages.dev"
+base_url = "https://forge-onward.pages.dev"
 
 title = "Forge-On - The Digital Forge Team in Silicon Valley"
 
